# timely-mirror

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  benchmark_16.sh  benchmark_32.sh  benchmark_64.sh  benchmark_fpga_16.sh  benchmark_fpga_32.sh  benchmark_fpga_64.sh  build.sh  build_cpu_15.sh  build_cpu_20.sh  build_cpu_31.sh  build_cpu_32.sh  build_cpu_4.sh  build_eci_15.sh  build_eci_16.sh  build_eci_32.sh  build_eci_4.sh  build_pcie.sh  build_xdma.sh  eci_op.rs  first_benchmark.sh  fpga_wrapper_eci_32.rs  fpga_wrapper_eci_4.rs  fpga_wrapper_eci_all_together.rs  pyproject.toml  run.sh  run_8.sh  software_run.sh  software_run_cpu.sh  software_run_eci.sh  software_run_xdma.sh  tt.rs
benchmarks/: get-numbers.py  get_latency_cdf.py  output_10.txt  output_1000.txt  output_103.txt  output_104.txt  output_105.txt  output_106.txt  output_107.txt  output_11.txt  output_112.txt  output_115.txt  output_116.txt  output_117.txt  (+541 more)
benchmarks-v2/: output_1.txt  output_101.txt  output_103.txt  output_105.txt  output_106.txt  output_109.txt  output_11.txt  output_112.txt  output_114.txt  output_116.txt  output_119.txt  output_12.txt  output_122.txt  output_124.txt  output_126.txt  output_129.txt  output_13.txt  output_132.txt  output_133.txt  output_135.txt  output_136.txt  output_138.txt  output_139.txt  output_141.txt  output_142.txt  output_145.txt  output_148.txt  output_149.txt  output_15.txt  output_151.txt  output_152.txt  output_154.txt  output_156.txt  output_157.txt  output_158.txt  output_159.txt  output_161.txt  output_162.txt  output_164.txt  output_165.txt  (+554 more)
(+4287 files in other folders)
